--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-inzi": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "^5.7.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^5.9.0",
     "nanoid": "^4.0.2",
     "openai": "^4.10.0"
   }
