--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.1",
     "bcrypt-inzi": "^2.0.0",
     "cookie-parser": "^1.4.6",
     "cookieparser": "^0.1.0",
